# readablepdf

./: .gitignore  README.md  ocr_pdf.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: ci.yml  publish.yml
src/readablepdf/: __about__.py  __init__.py  cli.py  pipeline.py
tests/: test_pipeline.py
