[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "readablepdf"
dynamic = ["version"]
description = "Turn image-only PDFs into searchable, selectable PDFs with an OCR text layer"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Arnaud" }]
license = { text = "MIT" }
dependencies = [
  "pdf2image>=1.17.0",
  "pypdf>=6.0.0",
]
keywords = ["pdf", "ocr", "tesseract", "poppler"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]

[project.scripts]
readablepdf = "readablepdf.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/readablepdf"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
fallback_version = "0.0.0"

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "pytest>=8.0.0",
  "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
